syntax = "proto3";

package kurrentdb.protocol.v2;

option csharp_namespace    = "KurrentDB.Protocol.PersistentSubscriptions.V2";
option java_package        = "io.kurrentdb.protocol.persistent_subscriptions.v2";
option java_multiple_files = true;

import "core.proto";

message PersistentSubscriptionsErrorDetails {
  message PersistentSubscriptionNotFound {
    option (error_info) = {
      code : "PERSISTENT_SUBSCRIPTION_NOT_FOUND",
      severity : RECOVERABLE,
      message : "The specified persistent subscription was not found. Please check the subscription name and try again."
    };
  }

  message MaximumSubscribersReached {
    option (error_info) = {
      code : "MAXIMUM_SUBSCRIBERS_REACHED",
      severity : RECOVERABLE,
      message : "The maximum number of subscribers for the stream has been reached. Please try again later or increase the limit."
    };
  }

  message PersistentSubscriptionDropped {
    option (error_info) = {
      code : "PERSISTENT_SUBSCRIPTION_DROPPED",
      severity : RECOVERABLE,
      message : "The persistent subscription has been dropped. This can happen due to various reasons such as network issues, server overload, or manual intervention. Please check the subscription status and try again."
    };
  }
}
